# systematic

./: CMakeLists.txt  README.md  package.xml
cmake/: systematic-config.cmake.in
include/systematic/legacy/: FileDescriptor.hpp  MemoryMapping.hpp
include/systematic/linux/: dma_buf.hpp  dma_heap.hpp  prctl.hpp  sched.hpp  udmabuf.hpp
include/systematic/posix/: FileDescriptor.hpp  MemoryMapping.hpp  fcntl.hpp  ioctl.hpp  mman.hpp  pidfd.hpp  unistd.hpp
include/systematic/pthread/: pthread.hpp
